<?xml version="1.0"?>
<package format="2">
  <name>timoo</name>
  <version>1.5.2</version>
  <description>
    Basic ROS support for the timoo 3D LIDARs.
  </description>
  <maintainer email="josh.whitley@autoware.org">Josh Whitley</maintainer>
  <author>Jack O'Quin</author>
  <license>BSD</license>
  <url type="website">http://www.ros.org/wiki/timoo</url>
  <url type="repository">https://github.com/ros-drivers/timoo</url>
  <url type="bugtracker">https://github.com/ros-drivers/timoo/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>timoo_driver</exec_depend>
  <exec_depend>timoo_laserscan</exec_depend>
  <exec_depend>timoo_msgs</exec_depend>
  <exec_depend>timoo_pointcloud</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
